<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.UploadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/user_image_to_upload"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_image_24dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="20dp"
            android:text="@string/gallery"
            app:layout_constraintEnd_toStartOf="@+id/btn_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/title_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/bg_outline"
            android:gravity="top|start"
            android:hint="@string/fill_your_story_here"
            android:inputType="textMultiLine"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_desc" />

        <CheckBox
            android:id="@+id/checkbox_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="#555"
            android:text="@string/share_location"
            app:layout_constraintStart_toStartOf="@id/ed_add_description"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/upload"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/ed_add_description"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/ed_add_description"
            app:layout_constraintTop_toBottomOf="@id/checkbox_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>