<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>
    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.upload.UploadFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_upload" >
        <action
            android:id="@+id/action_navigation_camera_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dicoding.picodiploma.loginwithanimation.view.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>