<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:paddingVertical="1dp"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/image_story"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/tv_created_at"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="10dp"
            android:layout_marginHorizontal="2dp"
            android:background="@drawable/bg_outline"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@drawable/ic_account_circle_24"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toStartOf="@id/tv_item_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_placeholder"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="@id/iv_profile" />


        <TextView
            android:id="@+id/tv_created_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/description"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_item_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>